fixing horizontal scroll on mobile

--- a/webpack-static-template/src/scss/pages/pages.scss
+++ b/webpack-static-template/src/scss/pages/pages.scss
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     background-color: $bgHeaderColor;
+    position: relative;
     overflow-x: hidden;
     a{
       &:hover{
